@@ -1,6 +1,6 @@
 
-R version 3.2.0 (2015-04-16) -- "Full of Ingredients"
-Copyright (C) 2015 The R Foundation for Statistical Computing
+R version 3.3.2 (2016-10-31) -- "Sincere Pumpkin Patch"
+Copyright (C) 2016 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -48,8 +48,7 @@ List of 6
   ..$ color: chr "gray"
   ..$ name : chr "Nail"
   ..$ sku  : int 284758393
-NULL
 > 
 > proc.time()
    user  system elapsed 
-  0.343   0.021   0.354 
+  0.296   0.012   0.301 
