@@ -1,7 +1,7 @@
 
-R version 3.2.0 (2015-04-16) -- "Full of Ingredients"
-Copyright (C) 2015 The R Foundation for Statistical Computing
-Platform: i686-pc-linux-gnu (32-bit)
+R version 3.3.2 (2016-10-31) -- "Sincere Pumpkin Patch"
+Copyright (C) 2016 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -25,8 +25,7 @@ List of 2
   ..$ key1: POSIXct[1:1], format: "1979-05-27 07:32:00"
   ..$ key2: POSIXct[1:1], format: "1979-05-27 07:32:00"
   ..$ key3: POSIXct[1:1], format: "1979-05-27 07:32:00"
-NULL
 > 
 > proc.time()
    user  system elapsed 
-  0.404   0.464   0.393 
+  0.268   0.032   0.296 
