@@ -1,6 +1,6 @@
 
-R version 3.2.0 (2015-04-16) -- "Full of Ingredients"
-Copyright (C) 2015 The R Foundation for Statistical Computing
+R version 3.3.2 (2016-10-31) -- "Sincere Pumpkin Patch"
+Copyright (C) 2016 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -31,8 +31,7 @@ List of 1
   .. ..$ key3: num -0.01
   ..$ underscores:List of 1
   .. ..$ key1: num 9224617
-NULL
 > 
 > proc.time()
    user  system elapsed 
-  0.339   0.020   0.349 
+  0.292   0.012   0.299 
