@@ -1,6 +1,6 @@
 
-R version 3.2.0 (2015-04-16) -- "Full of Ingredients"
-Copyright (C) 2015 The R Foundation for Statistical Computing
+R version 3.3.2 (2016-10-31) -- "Sincere Pumpkin Patch"
+Copyright (C) 2016 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -27,8 +27,7 @@ List of 1
   .. ..$ key1: int 1000
   .. ..$ key2: int 5349221
   .. ..$ key3: int 12345
-NULL
 > 
 > proc.time()
    user  system elapsed 
-  0.336   0.020   0.346 
+  0.280   0.016   0.290 
