@@ -1,6 +1,6 @@
 
-R version 3.2.0 (2015-04-16) -- "Full of Ingredients"
-Copyright (C) 2015 The R Foundation for Statistical Computing
+R version 3.3.2 (2016-10-31) -- "Sincere Pumpkin Patch"
+Copyright (C) 2016 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -33,8 +33,7 @@ List of 2
   ..$ y:List of 1
   .. ..$ z:List of 1
   .. .. ..$ w: list()
-NULL
 > 
 > proc.time()
    user  system elapsed 
-  0.339   0.024   0.347 
+  0.284   0.020   0.298 
