@@ -1,7 +1,7 @@
 
-R version 3.2.0 (2015-04-16) -- "Full of Ingredients"
-Copyright (C) 2015 The R Foundation for Statistical Computing
-Platform: i686-pc-linux-gnu (32-bit)
+R version 3.3.2 (2016-10-31) -- "Sincere Pumpkin Patch"
+Copyright (C) 2016 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -52,7 +52,6 @@ List of 7
   .. ..$ dc     : chr "eqdc10"
   .. ..$ ip     : chr "10.0.0.2"
  $ title   : chr "TOML Example"
-NULL
 > 
 > ## harder toml-lang::tests/hard_example.toml
 > print(tomlparse("toml_hard_example.toml"))
@@ -67,7 +66,6 @@ List of 1
   .. ..$ test_array         : chr [1:2] "] " " # "
   .. ..$ test_array2        : chr [1:2] "Test #11 ]proved that" "Experiment #9 was a success"
   ..$ test_string: chr "You'll hate me after this - #"
-NULL
 > 
 > ## example toml-lang::examples/example-v0.4.0.toml
 > ##
@@ -167,8 +165,7 @@ List of 13
   ..$ y:List of 1
   .. ..$ z:List of 1
   .. .. ..$ w: list()
-NULL
 > 
 > proc.time()
    user  system elapsed 
-  0.492   0.440   0.454 
+  0.336   0.020   0.352 
